@@ -15,18 +15,29 @@ import java.util.concurrent.Future;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
-// Remark: this class should be package private - change it or use a different class in BasicAction
-public class TwoPhaseCommitThreadPool {
-    private static final ExecutorService executor = initializeExecutor();
+public class TwoPhaseCommitThreadPool {//implements AutoCloseable {
+    private static boolean isUsingVirtualThreads;
+    private static ExecutorService executor = initializeExecutor();
 
     private static ExecutorService initializeExecutor() {
-        return Executors.newFixedThreadPool(
-                arjPropertyManager.getCoordinatorEnvironmentBean().getMaxTwoPhaseCommitThreads());
+        if (executor != null) {
+           close();
+        }
+
+        if (arjPropertyManager.getCoordinatorEnvironmentBean().isUseVirtualThreadsForTwoPhaseCommitThreads()) {
+            isUsingVirtualThreads = true;
+            return Executors.newVirtualThreadPerTaskExecutor();
+        } else {
+            isUsingVirtualThreads = false;
+            return Executors.newFixedThreadPool(
+                    arjPropertyManager.getCoordinatorEnvironmentBean().getMaxTwoPhaseCommitThreads());
+        }
     }
 
     static boolean restartExecutor() {
-        // only implemented when running on JRE 21 and above
-        return false;
+        executor = initializeExecutor();
+
+        return isUsingVirtualThreads;
     }
 
     public static Future<Integer> submitJob(Callable<Integer> job) {
@@ -41,11 +52,25 @@ public class TwoPhaseCommitThreadPool {
         return new ExecutorCompletionService<Boolean>(executor);
     }
 
-    static void submitJob(Consumer<BasicAction> func,
-                          BasicAction action) {
+    static void submitJob(Consumer<BasicAction> func, BasicAction action) {
         executor.submit(
                 () -> func.accept(action)
         );
+    }
+
+    static void submitJob(java.util.function.Consumer<Boolean> func) {
+        // Don't want heuristic information otherwise would not be running async
+        executor.submit(
+                () -> func.accept(false)
+        );
+    }
+
+    /**
+     * @see java.util.concurrent.ExecutorService
+     * Initiates an orderly shutdown in which previously submitted tasks are executed, but no new tasks will be accepted.
+     */
+    static void close() {
+        executor.close();
     }
 
     record BAAsyncPrepareJobParams(BasicAction theAction, AbstractRecord ar, Boolean reportHeuristics) {}
